--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,8 @@
 // colors
 
 $white: #ffffff;
-$light-color: #E1BBB7;
+// $light-color: #E1BBB7;
+$light-color: #cc8b8680;
 $medium-light-color: #CC8B86;
 $medium-dark-color: #382C2D;
 $dark-color: #260202;
